--- a/DotNet7/appsettings.json
+++ b/DotNet7/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "data source=DESKTOP-TE58J9L;initial catalog=GreatThinks;trusted_connection=true"
+    "DbConnection": "data source=DESKTOP-KIU157B;initial catalog=GreatThinks;trusted_connection=true"
+    //"DbConnection": "data source=DESKTOP-TE58J9L;initial catalog=GreatThinks;trusted_connection=true"
   }
 }
